--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,6 @@ export default class FeeGetByCifUseCase {
 
     // Processar Investiment Account Fees
     const equityField = await Field.find({ code: 7 });
-
-
     const investiment = new InvestimentAccountFee(
       groupedFees,
       accounts,
@@ -76,12 +74,12 @@ export default class FeeGetByCifUseCase {
   async #getFeesStructuredFromSQL(customerAccount) {
     // Obter os dados do SQL
     const feesData = await this.#getFeesFromSQL(customerAccount[0].cifno);
-  
+
     const feePackageId = feesData[0]?.['Default Fee Package Id'];
     if (!feePackageId) {
       throw new Error('Default Fee Package Id not found in feesData');
     }
-  
+
     // Construir o formato esperado para customerAccount
     const accounts = feesData.map((fee) => ({
       cifno: fee.CIFNO,
@@ -90,16 +88,16 @@ export default class FeeGetByCifUseCase {
       feeGroup: 1, // Pode ajustar se tiver lógica para isso
       kycMailingStatus: fee.StandardException === 'Standard' ? 'Standard' : 'Hold Mail',
     }));
-  
+
     // Estruturar os dados agrupados
     const groupedFees = {};
-  
+
     for (const fee of feesData) {
       const { FeeType, FeeDescription, FeeCode, FeeAmount, Frequency, DefaultFeeAmount, DefaultFrequency } = fee;
-  
+
       // Converter FeeCode via de/para
       const mappedCode = deParaFeeCodes[FeeCode] || FeeCode;
-  
+
       // Criar feeType se ainda não existir
       if (!groupedFees[FeeType]) {
         groupedFees[FeeType] = {
@@ -107,7 +105,7 @@ export default class FeeGetByCifUseCase {
           feeGroups: [],
         };
       }
-  
+
       // Adicionar Standard Fees
       let standardGroup = groupedFees[FeeType].feeGroups.find((group) => group.name === 'Standard Fees');
       if (!standardGroup) {
@@ -118,7 +116,7 @@ export default class FeeGetByCifUseCase {
         };
         groupedFees[FeeType].feeGroups.push(standardGroup);
       }
-  
+
       standardGroup.fields.push({
         code: mappedCode,
         name: FeeDescription,
@@ -126,7 +124,7 @@ export default class FeeGetByCifUseCase {
         tooltip: Frequency ? Frequency : '',
         isException: false,
       });
-  
+
       // Adicionar Client Current Fees
       let clientCurrentGroup = groupedFees[FeeType].feeGroups.find((group) => group.name === 'Client Current Fees');
       if (!clientCurrentGroup) {
@@ -137,7 +135,7 @@ export default class FeeGetByCifUseCase {
         };
         groupedFees[FeeType].feeGroups.push(clientCurrentGroup);
       }
-  
+
       clientCurrentGroup.fields.push({
         code: mappedCode,
         name: FeeDescription,
@@ -146,17 +144,29 @@ export default class FeeGetByCifUseCase {
         isException: false,
       });
     }
-  
+
     // Buscar exceções do SQL
     const exceptions = await this.#getExceptionFeesFromSQL(feePackageId);
     console.log('Exceptions from SQL:', exceptions);
-  
+
     // Adicionar Exceptions Group
     for (const exception of exceptions) {
       const { code, name, defaultValue, tooltip, isException } = exception;
-  
+
+      // Encontrar FeeType pelo FeeCode (deParaFeeCodes inverso)
+      const feeType = Object.keys(groupedFees).find((type) =>
+        groupedFees[type].feeGroups.some((group) =>
+          group.fields.some((field) => field.code === code)
+        )
+      );
+
+      if (!feeType) {
+        console.warn(`FeeType not found for exception code: ${code}`);
+        continue;
+      }
+
       // Encontrar ou criar o grupo de exceções
-      let exceptionGroup = groupedFees[exception.feeType]?.feeGroups.find(
+      let exceptionGroup = groupedFees[feeType]?.feeGroups.find(
         (group) => group.name === 'Exceptions'
       );
       if (!exceptionGroup) {
@@ -165,9 +175,9 @@ export default class FeeGetByCifUseCase {
           code: 3,
           fields: [],
         };
-        groupedFees[exception.feeType]?.feeGroups.push(exceptionGroup);
+        groupedFees[feeType]?.feeGroups.push(exceptionGroup);
       }
-  
+
       // Adicionar exceção ao grupo
       exceptionGroup.fields.push({
         code,
@@ -177,9 +187,9 @@ export default class FeeGetByCifUseCase {
         isException,
       });
     }
-  
+
     console.log('Grouped Fees with Exceptions:', groupedFees);
-  
+
     // Retornar groupedFees e accounts
     return { groupedFees: Object.values(groupedFees), accounts };
   }
@@ -220,151 +230,4 @@ export default class FeeGetByCifUseCase {
       isException: true,
     }));
   }
-}
-
-
-
-{
-    "code": 200,
-    "data": {
-        "fees": [
-            {
-                "feeType": "Customer Fees",
-                "feeGroups": [
-                    {
-                        "name": "Standard Fees",
-                        "code": 1,
-                        "fields": [
-                            {
-                                "code": 1,
-                                "name": "Account Maintenance Fee",
-                                "defaultValue": "",
-                                "tooltip": "",
-                                "isException": false,
-                                "exceptionOptions": [],
-                                "labelValue": "$0.00"
-                            },
-                            {
-                                "code": 2,
-                                "name": "Hold Mail Fee",
-                                "defaultValue": "",
-                                "tooltip": "Annual - Charged Annual",
-                                "isException": false,
-                                "exceptionOptions": [],
-                                "labelValue": "$0.00"
-                            }
-                        ],
-                        "kycMailingStatus": "Hold Mail",
-                        "cif": "K016665",
-                        "accountNumber": 99010118
-                    },
-                    {
-                        "name": "Client Current Fees",
-                        "code": 2,
-                        "fields": [
-                            {
-                                "code": 1,
-                                "name": "Account Maintenance Fee",
-                                "defaultValue": "",
-                                "tooltip": "",
-                                "isException": false,
-                                "exceptionOptions": []
-                            },
-                            {
-                                "code": 2,
-                                "name": "Hold Mail Fee",
-                                "defaultValue": "",
-                                "tooltip": "",
-                                "isException": false,
-                                "exceptionOptions": []
-                            }
-                        ],
-                        "cif": "K016665",
-                        "accountNumber": 99010118
-                    }
-                ]
-            },
-            {
-                "feeType": "Bank Account Fees",
-                "feeGroups": [
-                    {
-                        "name": "Standard Fees",
-                        "code": 1,
-                        "fields": [
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67a7b03e68a2d06cb9eef1df"
-                            },
-                            {
-                                "code": 8,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire (SafraLink) Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67a7b03e68a2d06cb9eef1e0"
-                            }
-                        ],
-                        "cif": "K016665",
-                        "accountNumber": "99010118",
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "_id": "67a7b03e68a2d06cb9eef1de"
-                    },
-                    {
-                        "name": "Client Current Fees",
-                        "code": 2,
-                        "fields": [
-                            {
-                                "code": 4,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67a7b03e68a2d06cb9eef1e2"
-                            },
-                            {
-                                "code": 8,
-                                "isStandard": false,
-                                "isCurrentClient": false,
-                                "isException": false,
-                                "name": "FX Outgoing Wire (SafraLink) Fee",
-                                "defaultValue": "",
-                                "hasChanged": false,
-                                "tooltip": "",
-                                "exceptionOptions": [],
-                                "_id": "67a7b03e68a2d06cb9eef1e3"
-                            }
-                        ],
-                        "cif": "K016665",
-                        "accountNumber": "99010118",
-                        "visible": true,
-                        "kycMailingStatus": null,
-                        "_id": "67a7b03e68a2d06cb9eef1e1"
-                    }
-                ]
-            },
-            {
-                "feeType": "Investment Account Fees",
-                "feeGroups": []
-            }
-        ],
-        "feesActives": [],
-        "documentUrl": "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm"
-    }
 }
